exports[`test renders disabled tags 1`] = `
<section
  className="background--light-secondary hard">
  <Meta
    description="Who are your people? We know it\'s important to be connected, but it\'s hard to build lasting friendships. What if taking one simple step changed everything? At NewSpring, we’re trying to make it easier for you to find people who share your interests. We know that when you get together with people and have fun, you’ll begin to grow into a strong community that serves and grows together. What if you are one step away from saying, “These are my people”?"
    image="https://dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.2x1_2000_1000_90_a789ae07aae81961.jpg"
    title="Group Finder" />
  <Apollo(Component) />
  <div
    className="background--light-primary soft soft-double-top soft-double-top@lap-and-up text-center"
    style={
      Object {
        "overflow": "visible",
      }
    }>
    <div>
      <h3>
        Find Your People
      </h3>
      <h6
        className="soft-half-bottom@handheld soft-bottom">
        <em>
          Select your interests, campus, and location 
          <br />
          to search for groups near you.
        </em>
      </h6>
      <Form
        action={true}
        classes={
          Array [
            "soft",
            "one-whole",
            "two-thirds@portable",
            "one-half@anchored",
            "display-inline-block",
            "push-bottom",
          ]
        }
        submit={[Function]}>
        <Keywords
          onChange={[Function]}
          tagOnClick={[Function]}
          tags={
            Array [
              Object {
                "value": "test",
              },
              Object {
                "value": "test",
              },
            ]
          } />
        <Input
          defaultValue=""
          inputClasses="outlined--dotted outlined--light h6 flush-bottom text-black"
          label="Campus"
          name="Campus"
          type="text" />
        <Input
          defaultValue=""
          inputClasses="outlined--dotted outlined--light h6 flush-bottom text-black"
          label="Location (zip)"
          name="Zip"
          type="text" />
      </Form>
    </div>
  </div>
  <div
    className="soft-double-bottom text-center background--light-primary">
    <div
      className="background--light-primary soft-double-sides@lap-wide-and-up">
      <button
        className="btn push-top@lap-and-up btn--disabled"
        disabled={true}
        onClick={[Function]}>
        Let\'s Go!
      </button>
    </div>
  </div>
  <div
    className="soft-half soft-sides@palm-wide-and-up soft-double-ends soft-double@lap-wide-and-up text-center">
    <h3
      className="push-top">
      You Can\'t Do Life Alone
    </h3>
    <div
      className="grid">
      <div
        className="grid__item one-whole one-half@palm-wide-and-up">
        <Connect(Apollo(LikesWrapper))
          item={Object {}} />
      </div>
      <div
        className="grid__item one-whole one-half@palm-wide-and-up">
        <Connect(Apollo(LikesWrapper))
          item={Object {}} />
      </div>
    </div>
  </div>
</section>
`;

exports[`test renders loading if no tags 1`] = `
<section
  className="background--light-secondary hard">
  <Meta
    description="Who are your people? We know it\'s important to be connected, but it\'s hard to build lasting friendships. What if taking one simple step changed everything? At NewSpring, we’re trying to make it easier for you to find people who share your interests. We know that when you get together with people and have fun, you’ll begin to grow into a strong community that serves and grows together. What if you are one step away from saying, “These are my people”?"
    image="https://dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.2x1_2000_1000_90_a789ae07aae81961.jpg"
    title="Group Finder" />
  <Apollo(Component) />
  <div
    className="background--light-primary soft soft-double-top soft-double-top@lap-and-up text-center"
    style={
      Object {
        "overflow": "visible",
      }
    }>
    <div>
      <h3>
        Find Your People
      </h3>
      <h6
        className="soft-half-bottom@handheld soft-bottom">
        <em>
          Select your interests, campus, and location 
          <br />
          to search for groups near you.
        </em>
      </h6>
      <Form
        action={true}
        classes={
          Array [
            "soft",
            "one-whole",
            "two-thirds@portable",
            "one-half@anchored",
            "display-inline-block",
            "push-bottom",
          ]
        }
        submit={[Function]}>
        <Keywords
          onChange={[Function]}
          tagOnClick={[Function]}
          tags={Array []} />
        <Input
          defaultValue=""
          inputClasses="outlined--dotted outlined--light h6 flush-bottom text-black"
          label="Campus"
          name="Campus"
          type="text" />
        <Input
          defaultValue=""
          inputClasses="outlined--dotted outlined--light h6 flush-bottom text-black"
          label="Location (zip)"
          name="Zip"
          type="text" />
      </Form>
    </div>
  </div>
  <div
    className="soft-double-bottom text-center background--light-primary">
    <div
      className="background--light-primary soft-double-sides@lap-wide-and-up">
      <div
        className="one-whole text-center">
        <Loading />
      </div>
    </div>
  </div>
  <div
    className="soft-half soft-sides@palm-wide-and-up soft-double-ends soft-double@lap-wide-and-up text-center">
    <h3
      className="push-top">
      You Can\'t Do Life Alone
    </h3>
    <div
      className="grid">
      <div
        className="grid__item one-whole one-half@palm-wide-and-up">
        <Connect(Apollo(LikesWrapper))
          item={Object {}} />
      </div>
      <div
        className="grid__item one-whole one-half@palm-wide-and-up">
        <Connect(Apollo(LikesWrapper))
          item={Object {}} />
      </div>
    </div>
  </div>
</section>
`;

exports[`test renders with props 1`] = `
<section
  className="background--light-secondary hard">
  <Meta
    description="Who are your people? We know it\'s important to be connected, but it\'s hard to build lasting friendships. What if taking one simple step changed everything? At NewSpring, we’re trying to make it easier for you to find people who share your interests. We know that when you get together with people and have fun, you’ll begin to grow into a strong community that serves and grows together. What if you are one step away from saying, “These are my people”?"
    image="https://dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.2x1_2000_1000_90_a789ae07aae81961.jpg"
    title="Group Finder" />
  <Apollo(Component) />
  <div
    className="background--light-primary soft soft-double-top soft-double-top@lap-and-up text-center"
    style={
      Object {
        "overflow": "visible",
      }
    }>
    <div>
      <h3>
        Find Your People
      </h3>
      <h6
        className="soft-half-bottom@handheld soft-bottom">
        <em>
          Select your interests, campus, and location 
          <br />
          to search for groups near you.
        </em>
      </h6>
      <Form
        action={true}
        classes={
          Array [
            "soft",
            "one-whole",
            "two-thirds@portable",
            "one-half@anchored",
            "display-inline-block",
            "push-bottom",
          ]
        }
        submit={[Function]}>
        <Keywords
          onChange={[Function]}
          tagOnClick={[Function]}
          tags={
            Array [
              Object {
                "value": "test",
              },
              Object {
                "value": "test",
              },
            ]
          } />
        <Input
          defaultValue=""
          inputClasses="outlined--dotted outlined--light h6 flush-bottom text-black"
          label="Campus"
          name="Campus"
          type="text" />
        <Input
          defaultValue=""
          inputClasses="outlined--dotted outlined--light h6 flush-bottom text-black"
          label="Location (zip)"
          name="Zip"
          type="text" />
      </Form>
    </div>
  </div>
  <div
    className="soft-double-bottom text-center background--light-primary">
    <div
      className="background--light-primary soft-double-sides@lap-wide-and-up">
      <button
        className="btn push-top@lap-and-up"
        disabled={false}
        onClick={[Function]}>
        Let\'s Go!
      </button>
    </div>
  </div>
  <div
    className="soft-half soft-sides@palm-wide-and-up soft-double-ends soft-double@lap-wide-and-up text-center">
    <h3
      className="push-top">
      You Can\'t Do Life Alone
    </h3>
    <div
      className="grid">
      <div
        className="grid__item one-whole one-half@palm-wide-and-up">
        <Connect(Apollo(LikesWrapper))
          item={Object {}} />
      </div>
      <div
        className="grid__item one-whole one-half@palm-wide-and-up">
        <Connect(Apollo(LikesWrapper))
          item={Object {}} />
      </div>
    </div>
  </div>
</section>
`;
